@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 2;
+use Test::More tests => 3;
 
 use lib 't';
 use Util;
@@ -52,6 +52,54 @@ else {
 
 sets_match( $stdout, \@expected, __FILE__ );
 is_empty_array( $stderr );
+
+
+# GH #175: -s doesn't work with -x
+# We have to show that -s supresses errors on missing and unreadable files,
+# while still giving results on files that are there.
+subtest 'GH #175' => sub {
+    plan tests => 5;
+
+    my @search_files;
+    my @expected_errors;
+    my $unreadable_file;    # Can't be localized or else it will be cleaned up.
+
+    my $nonexistent_filename = '/tmp/non-existent-file' . $$ . '.txt';
+    push( @search_files, $nonexistent_filename );
+    push( @expected_errors, qr/\Q$nonexistent_filename: No such file/ );
+
+    if ( !is_windows() ) {
+        $unreadable_file = create_tempfile();
+        my $unreadable_filename = $unreadable_file->filename;
+        my (undef, $result) = make_unreadable( $unreadable_filename );
+        die $result if $result;
+
+        push( @search_files, $unreadable_filename );
+        push( @expected_errors, qr/\Q$unreadable_filename: Permission denied/ );
+    }
+
+    my $ok_file = create_tempfile( 'My Pal Foot-Foot', 'Foo Fighters', 'I pity the fool', 'Not a match' );
+    push( @search_files, $ok_file );
+
+    my $input_file = create_tempfile( @search_files );
+
+    # Without -s, we get an error about the missing file.
+    my ($stdout,$stderr) = pipe_into_ack_with_stderr( $input_file->filename, '-x', '-i', 'foo' );
+    is( scalar @{$stdout}, 3, 'Got three matches' );
+
+    my $n = 0;
+    for my $error ( @{$stderr} ) {
+        ++$n;
+        my $expected = shift @expected_errors;
+        like( $error, $expected, "Error #$n matches" );
+    }
+    pass( 'One freebie pass for Windows' ) if is_windows();
+
+    # With -s, there is no warning.
+    ($stdout,$stderr) = pipe_into_ack_with_stderr( $input_file->filename, '-x', '-i', '-s', 'foo' );
+    is( scalar @{$stdout}, 3, 'Still got three matches' );
+    is_empty_array( $stderr, 'No errors' );
+};
 
 done_testing();
 exit 0;
